@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.183 2009/05/26 18:45:22 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.184 2009/06/05 20:00:56 keri Exp $
+
+*swi-prolog-5.7.9 (05 Jun 2009)
+
+  05 Jun 2009; <keri@gentoo.org> +swi-prolog-5.7.9.ebuild:
+  Bump -5.7 development version
 
   26 May 2009; <keri@gentoo.org> swi-prolog-5.6.64.ebuild,
   swi-prolog-5.7.8.ebuild:
